--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL="mysql://USER:PASSWORD:PORT/DATABASE"
+DATABASE_URL="mysql://USER:PASSWORD@HOST:PORT/DATABASE"
 
 accessKeyId="YOUR_AWS_ACCESS_KEY_ID"
 secretAccessKey="YOUR_AWS_SECRET_ACCESS_KEY"
