--- a/package.json
+++ b/package.json
@@ -21,16 +21,24 @@
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^1.9.1",
+    "@nestjs/bull": "^10.0.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/passport": "^10.0.2",
+    "@nestjs/platform-express": "^10.2.9",
     "@prisma/client": "^5.5.2",
     "aws-sdk": "^2.1488.0",
+    "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
+    "bull": "^4.11.5",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
+    "passport-jwt": "^4.0.1",
     "pug": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
@@ -57,7 +65,7 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.2.2"
   },
   "jest": {
     "moduleFileExtensions": [
